# swagger-to-docs

./: .env.example  CHANGELOG.md  COMPLETION_REPORT.md  LICENSE  OVERVIEW.py  QUICKSTART.md  README.md  START_HERE.py  STRUCTURE.md  USAGE.md  advanced_generator.py  cli.py  config.py  examples.py  main.py  pyproject.toml  requirements.txt  setup.sh  test_openapi.py  utils.py
examples/: uspto.json
