[project]
name = "swagger-to-docs"
version = "0.1.0"
description = "Convert OpenAPI/Swagger specifications to Markdown documentation using LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-core>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.0.1"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.7.0"]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.0.200"]
